--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  overflow-x: hidden;
+}
+.navbar{
+  display: flex;
+  flex-direction: row;
+  padding-left: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search{
+  width: 30vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sub{
+  padding-right: 50px;
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+ .navbar{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  padding-left: 0;
+ }
+ .search{
+  width: 70vw;
 }
-
-.App-link {
-  color: #61dafb;
+.sub{
+  padding-right: calc(var(--bs-gutter-x) * .5);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
