--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .paggg{
-  margin: 10px 70px;
+  margin: 10px 0px;
 }
 .lim{
   margin: 30px 70px;
@@ -47,7 +47,13 @@
   justify-content: flex-start;
   align-items: center;
 }
-
+.pap{
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 30px 70px;
+}
 @media only screen and (max-width: 768px) {
  .navbar{
   display: flex;
@@ -74,6 +80,9 @@
 
 }
 .paggg{
-  margin: 10px 10px;
+  margin: 10px 0px;
+}
+.pap{
+  margin: 10px 0px;
 }
 }
